fix: changed link color theme to a higher contrast pair

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,8 @@ h2,
 h3 {
   font-weight: var(--font-weight-u1);
 }
+
+:root {
+  --color-fore-link-0: #5e2ca5;
+  --color-back-link-0: #ffffff;
+}
